--- a/eda/raw.ipynb
+++ b/eda/raw.ipynb
@@ -728,15 +728,428 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T20:59:30.978050Z",
-     "start_time": "2024-12-04T20:59:30.974157Z"
+     "end_time": "2024-12-05T20:46:00.864580Z",
+     "start_time": "2024-12-05T20:46:00.384004Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "from catboost import CatBoostClassifier\n",
+    "\n",
+    "CatBoostClassifier.get"
+   ],
    "id": "fa0a69e7cc140726",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "        application_id  client_id_x  equifax_id reporting_dt  \\\n",
+       "0             51859026     15984285     9344571   2023-08-01   \n",
+       "1             51859359     15984353     9344781   2023-08-01   \n",
+       "2             51859359     15984353     9344781   2023-08-01   \n",
+       "3             51859863     15984478     9345100   2023-08-01   \n",
+       "4             51860912     15984719     9345907   2023-08-01   \n",
+       "...                ...          ...         ...          ...   \n",
+       "481330        52953097     16216474    11758815   2023-09-17   \n",
+       "481331        52953097     16216474    11758815   2023-09-17   \n",
+       "481332        52953097     16216474    11758815   2023-09-17   \n",
+       "481333        52953097     16216474    11758815   2023-09-17   \n",
+       "481334        52953097     16216474    11758815   2023-09-17   \n",
+       "\n",
+       "               account_uid   fund_date  trade_owner_indic trade_opened_dt  \\\n",
+       "0       902086582865039990  2014-07-11                1.0      2014-07-11   \n",
+       "1       654289381013228862  2015-02-13                1.0      2015-02-13   \n",
+       "2       741680445545450197  2012-03-21                1.0      2012-03-21   \n",
+       "3       634072954671362970  2023-05-10                1.0      2023-05-10   \n",
+       "4       446357239045684673  2022-12-11                1.0      2022-12-11   \n",
+       "...                    ...         ...                ...             ...   \n",
+       "481330  489511923619133308  2022-11-19                1.0      2022-11-19   \n",
+       "481331  332254952791259403  2023-04-03                1.0      2023-04-03   \n",
+       "481332   89764954048609942  2023-08-15                1.0      2023-08-15   \n",
+       "481333  646461590573992788  2023-08-21                1.0      2023-08-21   \n",
+       "481334  476384584631635259  2023-09-13                1.0      2023-09-13   \n",
+       "\n",
+       "        trade_trade_type_code  trade_loan_kind_code  ...  \\\n",
+       "0                         1.0                   1.0  ...   \n",
+       "1                         1.0                   1.0  ...   \n",
+       "2                         1.0                   5.0  ...   \n",
+       "3                         1.0                   7.0  ...   \n",
+       "4                         1.0                   5.0  ...   \n",
+       "...                       ...                   ...  ...   \n",
+       "481330                    1.0                   3.0  ...   \n",
+       "481331                    1.0                   3.0  ...   \n",
+       "481332                    1.0                   5.0  ...   \n",
+       "481333                    1.0                   3.0  ...   \n",
+       "481334                    1.0                   3.0  ...   \n",
+       "\n",
+       "        past_due_int_missed_date  delay5  delay30  delay60  delay90  \\\n",
+       "0                            NaN       2        2        0        1   \n",
+       "1                            NaN       0        1        0        0   \n",
+       "2                            NaN       0        0        0        0   \n",
+       "3                            NaN       0        0        0        0   \n",
+       "4                            NaN       0        2        0        0   \n",
+       "...                          ...     ...      ...      ...      ...   \n",
+       "481330                       NaN       0        0        0        0   \n",
+       "481331                       NaN       0        0        0        0   \n",
+       "481332                       NaN       0        0        0        0   \n",
+       "481333                       NaN       0        0        0        0   \n",
+       "481334                       NaN       0        0        0        0   \n",
+       "\n",
+       "       delay_more  cred_max_overdue  \\\n",
+       "0              16         113333.27   \n",
+       "1              13          77541.87   \n",
+       "2               1         101457.30   \n",
+       "3               0              0.00   \n",
+       "4               0           1195.90   \n",
+       "...           ...               ...   \n",
+       "481330          0              0.00   \n",
+       "481331          0              0.00   \n",
+       "481332          0              0.00   \n",
+       "481333          0              0.00   \n",
+       "481334          0              0.00   \n",
+       "\n",
+       "                                               attr_value  client_id_y  target  \n",
+       "0       CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC...     15984285       1  \n",
+       "1       SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSAAAAAAAAAAAA...     15984353       1  \n",
+       "2       --543100000AAAAAAAA98765432-------------------...     15984353       1  \n",
+       "3                                                    -000     15984478       1  \n",
+       "4                                               -22020000     15984719       0  \n",
+       "...                                                   ...          ...     ...  \n",
+       "481330                                        CCCCCCCCCC0     16216474       0  \n",
+       "481331                                             CCCCCC     16216474       0  \n",
+       "481332                                                 -0     16216474       0  \n",
+       "481333                                                 -0     16216474       0  \n",
+       "481334                                                  0     16216474       0  \n",
+       "\n",
+       "[481335 rows x 94 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>application_id</th>\n",
+       "      <th>client_id_x</th>\n",
+       "      <th>equifax_id</th>\n",
+       "      <th>reporting_dt</th>\n",
+       "      <th>account_uid</th>\n",
+       "      <th>fund_date</th>\n",
+       "      <th>trade_owner_indic</th>\n",
+       "      <th>trade_opened_dt</th>\n",
+       "      <th>trade_trade_type_code</th>\n",
+       "      <th>trade_loan_kind_code</th>\n",
+       "      <th>...</th>\n",
+       "      <th>past_due_int_missed_date</th>\n",
+       "      <th>delay5</th>\n",
+       "      <th>delay30</th>\n",
+       "      <th>delay60</th>\n",
+       "      <th>delay90</th>\n",
+       "      <th>delay_more</th>\n",
+       "      <th>cred_max_overdue</th>\n",
+       "      <th>attr_value</th>\n",
+       "      <th>client_id_y</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>51859026</td>\n",
+       "      <td>15984285</td>\n",
+       "      <td>9344571</td>\n",
+       "      <td>2023-08-01</td>\n",
+       "      <td>902086582865039990</td>\n",
+       "      <td>2014-07-11</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2014-07-11</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>113333.27</td>\n",
+       "      <td>CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC...</td>\n",
+       "      <td>15984285</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51859359</td>\n",
+       "      <td>15984353</td>\n",
+       "      <td>9344781</td>\n",
+       "      <td>2023-08-01</td>\n",
+       "      <td>654289381013228862</td>\n",
+       "      <td>2015-02-13</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2015-02-13</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>77541.87</td>\n",
+       "      <td>SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSAAAAAAAAAAAA...</td>\n",
+       "      <td>15984353</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>51859359</td>\n",
+       "      <td>15984353</td>\n",
+       "      <td>9344781</td>\n",
+       "      <td>2023-08-01</td>\n",
+       "      <td>741680445545450197</td>\n",
+       "      <td>2012-03-21</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2012-03-21</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101457.30</td>\n",
+       "      <td>--543100000AAAAAAAA98765432-------------------...</td>\n",
+       "      <td>15984353</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>51859863</td>\n",
+       "      <td>15984478</td>\n",
+       "      <td>9345100</td>\n",
+       "      <td>2023-08-01</td>\n",
+       "      <td>634072954671362970</td>\n",
+       "      <td>2023-05-10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2023-05-10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-000</td>\n",
+       "      <td>15984478</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>51860912</td>\n",
+       "      <td>15984719</td>\n",
+       "      <td>9345907</td>\n",
+       "      <td>2023-08-01</td>\n",
+       "      <td>446357239045684673</td>\n",
+       "      <td>2022-12-11</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2022-12-11</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1195.90</td>\n",
+       "      <td>-22020000</td>\n",
+       "      <td>15984719</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>481330</th>\n",
+       "      <td>52953097</td>\n",
+       "      <td>16216474</td>\n",
+       "      <td>11758815</td>\n",
+       "      <td>2023-09-17</td>\n",
+       "      <td>489511923619133308</td>\n",
+       "      <td>2022-11-19</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2022-11-19</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>CCCCCCCCCC0</td>\n",
+       "      <td>16216474</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>481331</th>\n",
+       "      <td>52953097</td>\n",
+       "      <td>16216474</td>\n",
+       "      <td>11758815</td>\n",
+       "      <td>2023-09-17</td>\n",
+       "      <td>332254952791259403</td>\n",
+       "      <td>2023-04-03</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2023-04-03</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>CCCCCC</td>\n",
+       "      <td>16216474</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>481332</th>\n",
+       "      <td>52953097</td>\n",
+       "      <td>16216474</td>\n",
+       "      <td>11758815</td>\n",
+       "      <td>2023-09-17</td>\n",
+       "      <td>89764954048609942</td>\n",
+       "      <td>2023-08-15</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2023-08-15</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0</td>\n",
+       "      <td>16216474</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>481333</th>\n",
+       "      <td>52953097</td>\n",
+       "      <td>16216474</td>\n",
+       "      <td>11758815</td>\n",
+       "      <td>2023-09-17</td>\n",
+       "      <td>646461590573992788</td>\n",
+       "      <td>2023-08-21</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2023-08-21</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0</td>\n",
+       "      <td>16216474</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>481334</th>\n",
+       "      <td>52953097</td>\n",
+       "      <td>16216474</td>\n",
+       "      <td>11758815</td>\n",
+       "      <td>2023-09-17</td>\n",
+       "      <td>476384584631635259</td>\n",
+       "      <td>2023-09-13</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2023-09-13</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16216474</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>481335 rows × 94 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": null,
+   "source": "",
+   "id": "18aeec5cb7b4bd7d"
   }
  ],
  "metadata": {
